otros cambios con form

--- a/index.html
+++ b/index.html
@@ -7,16 +7,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi CV</title>
   <link rel="stylesheet" href="style.css">
-</head>
+  </head>
 <body>
+<header>
   <h1>CURRICULUM VITAE</h1>
   <h2>Roldan Bacilio Puón</h2>
- <article>
+</header>  
+   <nav>
+      <ul>
+          <li><a href="#">Datos personales</a>  <a href="#">Experiencia</a>  <a href="#">Cursos</a>  </li>
+         <!-- <li><a href="#">Experiencia</a></li>
+         <li><a href="#">Cursos</a></li>
+         -->
+      </ul>
+   </nav> 
+  
   <section class="BarraH">
-    <h3>Datos generales</h3>
+    <menu>
+      <span><a href="#"> Datos personales</a></span>
+      <span>Experiencia laboral</span>
+      <span>Cursos</span>
+      <span>Logros</span>
+      <span>Acerca de..</span>
+    </menu>
   </section>
- </article>
-    
-
+  <h3 id="DG">Datos generales</h3>  
 </body>
 </html>
