--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
       <span>Acerca de..</span>
     </menu>
   </section>
-  <h3 id="DG">Datos generales</h3>  
+
+  <h3 id="DG">Datos generales</h3>
+
+<form action="">
+  <label class="descripcion" for="Nombre">Introduzca su nombre:</label>
+  <input class="entrada" type="text" name="Nombre" />
+
+  <label class="descripcion" for="Edad">Introduzca tu edad:</label>
+  <input class="entrada" type="number" name="Edad" />
+
+  <label class="descripcion" for="Telefono">Telefono:</label>
+  <input class="entrada" type="tel" name="Telefono" />
+</form>
+
+
 </body>
 </html>
