Preparando mi CV

--- a/index.html
+++ b/index.html
@@ -10,15 +10,23 @@
   </head>
 <body>
 <header>
-  <h1>CURRICULUM VITAE</h1>
+  <table>
+     <td>
+      <th>
+        <tr><img src="RBP.png" alt="" srcset=""></tr>
+        <tr><h1>CURRICULUM VITAE</h1></tr>
+      </th>
+    </td>
+  </table>
+ 
   <h2>Roldan Bacilio Puón</h2>
 </header>  
    <nav>
       <ul>
-          <li><a href="#">Datos personales</a>  <a href="#">Experiencia</a>  <a href="#">Cursos</a>  </li>
-         <!-- <li><a href="#">Experiencia</a></li>
+         <li><a href="#">Datos personales</li>
+         <li><a href="#">Experiencia</a></li>
          <li><a href="#">Cursos</a></li>
-         -->
+         
       </ul>
    </nav> 
   
@@ -33,17 +41,6 @@
   </section>
 
   <h3 id="DG">Datos generales</h3>
-
-<form action="">
-  <label class="descripcion" for="Nombre">Introduzca su nombre:</label>
-  <input class="entrada" type="text" name="Nombre" />
-
-  <label class="descripcion" for="Edad">Introduzca tu edad:</label>
-  <input class="entrada" type="number" name="Edad" />
-
-  <label class="descripcion" for="Telefono">Telefono:</label>
-  <input class="entrada" type="tel" name="Telefono" />
-</form>
 
 
 </body>
