--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,26 +10,23 @@
   </head>
 <body>
 <header>
-  <table>
-     <td>
-      <th>
-        <tr><img src="RBP.png" alt="" srcset=""></tr>
-        <tr><h1>CURRICULUM VITAE</h1></tr>
-      </th>
-    </td>
-  </table>
- 
+  <div class="">
+    <img src="RBP.png" alt="RoldanBP" style="float:left;width:100px;height:100px;"">
+  </div>
+  <h1>CURRICULUM VITAE</h1>
   <h2>Roldan Bacilio Puón</h2>
-</header>  
+  <hr>
+
    <nav>
       <ul>
          <li><a href="#">Datos personales</li>
-         <li><a href="#">Experiencia</a></li>
-         <li><a href="#">Cursos</a></li>
-         
+         <li><a href="#">Experiencia</li>
+         <li><a href="#">Cursos</li>
       </ul>
    </nav> 
-  
+</header>     
+
+<!--   
   <section class="BarraH">
     <menu>
       <span><a href="#"> Datos personales</a></span>
@@ -39,9 +36,29 @@
       <span>Acerca de..</span>
     </menu>
   </section>
+-->
+<div class="mi-contenedor">
+  <h3 id="DatP">Datos generales</h3>
+  <table >
+    <tr>
+      <th>Dirección</th>
+      <th>Teléfono</th>
+      <th>Correo</th>
+    </tr>
+    <tr>
+      <td>Av. Venezuela 12, Las Americas 2, Tapachula Chiapas, México</td>
+      <td>+52 962-***-****</td>
+      <td>roldan.bacilio@hotmail.com</td>
+    </tr>
+   
+  </table>
 
-  <h3 id="DG">Datos generales</h3>
+</div>
+  
 
 
+<footer>
+  <h5>Contacto</h5>
+</footer>
 </body>
 </html>
