--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <ul>
          <li><a href="#">Datos personales</li>
          <li><a href="#">Experiencia</li>
-         <li><a href="#">Cursos</li>
+         <li><a href="#">Habilidades y Conocimiento</li>
       </ul>
    </nav> 
 </header>     
@@ -37,7 +37,7 @@
     </menu>
   </section>
 -->
-<div class="mi-contenedor">
+<div>
   <h3 id="DatP">Datos generales</h3>
   <table >
     <tr>
@@ -54,7 +54,14 @@
   </table>
 
 </div>
-  
+
+<section>
+  <h3>Experiencia</h3>
+  <h4>SAT/AGCTI/ACOST/AAD</h4>
+  <p><strong>Enlace (Analista de Infraestructura)</strong><br> 
+  Actividades: Revisiones a la infraestructura para detectar áreas de oportunidad y mejoras a los componentes de TIC, proponiendo las mejores prácticas para garantizar la continuidad operativa de la institución.</p>
+
+</section>
 
 
 <footer>
