--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="author" content="Roldan Bacilio Puon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi CV</title>
   <link rel="stylesheet" href="style.css">
@@ -19,27 +22,29 @@
 
    <nav>
       <ul>
-         <li><a href="#">Datos personales</li>
-         <li><a href="#">Experiencia</li>
+         <li><a href="#DatP">Datos personales</li>
+         <li><a href="#Exp">Experiencia</li>
          <li><a href="#">Habilidades y Conocimiento</li>
       </ul>
    </nav> 
 </header>     
 
-<!--   
-  <section class="BarraH">
-    <menu>
-      <span><a href="#"> Datos personales</a></span>
-      <span>Experiencia laboral</span>
-      <span>Cursos</span>
-      <span>Logros</span>
-      <span>Acerca de..</span>
-    </menu>
-  </section>
--->
+
 <div>
   <h3 id="DatP">Datos generales</h3>
-  <table >
+  <div class="row">
+    <div class="col">
+      <h4><strong>Dirección</strong></h4>
+      <p>Av. Venezuela No. 12, Las Américas 2, Tapachula, Chiapas, México</p>
+      <p>Teléfono : +52 962-***-****</p>
+    </div>
+    <div class="col">
+
+
+    </div>
+  </div>
+  
+  <!--<table >
     <tr>
       <th>Dirección</th>
       <th>Teléfono</th>
@@ -51,14 +56,14 @@
       <td>roldan.bacilio@hotmail.com</td>
     </tr>
    
-  </table>
+  </table>-->
 
 </div>
 
 <section>
-  <h3>Experiencia</h3>
-  <h4>SAT/AGCTI/ACOST/AAD</h4>
-  <p><strong>Enlace (Analista de Infraestructura)</strong><br> 
+  <h3 id="Exp">Experiencia</h3>
+  <h4>SAT / AGCTI/ ACOST / AAD</h4>
+  <p><strong>Enlace (Analista de Infraestructura)</strong> 2006 - Actual<br> 
   Actividades: Revisiones a la infraestructura para detectar áreas de oportunidad y mejoras a los componentes de TIC, proponiendo las mejores prácticas para garantizar la continuidad operativa de la institución.</p>
 
 </section>
