--- a/index.html
+++ b/index.html
@@ -4,73 +4,70 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="author" content="Roldan Bacilio Puon">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+ <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous"> -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi CV</title>
   <link rel="stylesheet" href="style.css">
   </head>
 <body>
 <header>
-  <div class="">
-    <img src="RBP.png" alt="RoldanBP" style="float:left;width:100px;height:100px;"">
+  <div>
+    <img src="RBP.png" alt="RoldanBP" id="imagen" >
   </div>
-  <h1>CURRICULUM VITAE</h1>
-  <h2>Roldan Bacilio Puón</h2>
+  <h1>Roldan Bacilio Puón</h1>
+  <h2>Lic. Informática</h2>
   <hr>
-
+<!--BARRA DE NAVEGACIÓN-->
    <nav>
       <ul>
          <li><a href="#DatP">Datos personales</li>
          <li><a href="#Exp">Experiencia</li>
          <li><a href="#">Habilidades y Conocimiento</li>
+          <li><a href="#Cont">Contacto</li> 
       </ul>
    </nav> 
 </header>     
 
-
 <div>
-  <h3 id="DatP">Datos generales</h3>
-  <div class="row">
-    <div class="col">
-      <h4><strong>Dirección</strong></h4>
-      <p>Av. Venezuela No. 12, Las Américas 2, Tapachula, Chiapas, México</p>
-      <p>Teléfono : +52 962-***-****</p>
+    <div class="renglon">
+    <div class="columna">
+      <h3 id="DatP">Datos generales</h3>
+      <p><strong>Dirección:</strong> Avenida Venezuela #12, Las Américas 2, Tapachula, Chiapas.</p>
+      <p><strong>Teléfono:</strong> +52962-129-0000</p>
+      <P><strong>Correo:</strong> roldan.bacilio@hotmail.com</P>
     </div>
-    <div class="col">
-
-
+    <div class="Resumen">
+      <h3><strong>Resumen Profesional</strong></h3>
+      <p>Profesional con 22 años de experiencia en el sector y excelentes dotes de liderazgo y de integración de equipos. A lo largo de mi carrera siempre he destacado por mi capacidad para encontrar soluciones, proponer mejoras a los procesos, optimizar recursos y maximizar los beneficios. siempre busco desarrollarme profesionalmente y en constante capacitación.</P>
     </div>
   </div>
-  
-  <!--<table >
-    <tr>
-      <th>Dirección</th>
-      <th>Teléfono</th>
-      <th>Correo</th>
-    </tr>
-    <tr>
-      <td>Av. Venezuela 12, Las Americas 2, Tapachula Chiapas, México</td>
-      <td>+52 962-***-****</td>
-      <td>roldan.bacilio@hotmail.com</td>
-    </tr>
-   
-  </table>-->
 
+ <div class="renglon">
+  <div class="columna">
+    <h3 id="Exp">Experiencia</h3>
+    <h4>SAT/AGCTI/ACOST/AAD</h4>
+    <p><strong>Enlace (Analista de Infraestructura)</strong><br> 
+      •	Revisiones de infraestructura de TIC, detectando áreas de oportunidad y proponiendo las mejores prácticas para garantizar la continuidad operativa de la institución.<br>
+      •	Revisión del marco normativo de acuerdo con las mejores prácticas en materia de TIC.<br>
+      •	Análisis de información a efectos de elaborar cédulas de seguimiento de los hallazgos detectados.<br>
+      •	Generar informe de resultados en materia de TIC.<br>
+      •	Entrevistas virtuales por MS-TEAM.<br>
+    </p>
+  </div>
+ </div>
+ 
 </div>
 
-<section>
-  <h3 id="Exp">Experiencia</h3>
-  <h4>SAT / AGCTI/ ACOST / AAD</h4>
-  <p><strong>Enlace (Analista de Infraestructura)</strong> 2006 - Actual<br> 
-  Actividades: Revisiones a la infraestructura para detectar áreas de oportunidad y mejoras a los componentes de TIC, proponiendo las mejores prácticas para garantizar la continuidad operativa de la institución.</p>
 
-</section>
 
 
 <footer>
-  <h5>Contacto</h5>
+  <h5 id="Cont">Contacto</h5>
 </footer>
+
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>-->
 </body>
 </html>
