otro parrafo de experiencia

--- a/index.html
+++ b/index.html
@@ -56,13 +56,17 @@
       •	Generar informe de resultados en materia de TIC.<br>
       •	Entrevistas virtuales por MS-TEAM.<br>
     </p>
+    <p><strong>Enlace Local de Servicios Informáticos</strong><br> 
+      •	Soporte técnico a los usuarios del SAT/Aduana de Ciudad Hidalgo, Chiapas.<br>
+      •	Instalación y configuración de software institucional (SIREM, SIRESI, SICOSEM, SICA, SCAAA, Informix, ODBC).<br>
+      •	Diagnostico y solución de fallas en equipos de cómputo y periféricos (Pistolas lectoras de código de barras Symbol, Certificadoras EPSON, Lector de Huellas)<br>
+      •	Atención de incidentes en proyectos Servicios de Transportes de Carga y ligero [SIAVE, STC).<br>
+      •	Continuidad operativa de proyecto Videovigilancia administrada VIVA, mediante la gestión de decodificadores de video y gestión de servidores de grabación<br>
+    </p>
   </div>
  </div>
  
 </div>
-
-
-
 
 <footer>
   <h5 id="Cont">Contacto</h5>
