--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="author" content="Roldan Bacilio Puon">
- <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous"> -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi CV</title>
   <link rel="stylesheet" href="style.css">
@@ -21,57 +22,94 @@
   <h2>Lic. Informática</h2>
   <hr>
 <!--BARRA DE NAVEGACIÓN-->
-   <nav>
-      <ul>
-         <li><a href="#DatP">Datos personales</li>
-         <li><a href="#Exp">Experiencia</li>
-         <li><a href="#">Habilidades y Conocimiento</li>
-          <li><a href="#Cont">Contacto</li> 
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Menú</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">        
+      <li class="nav-item">
+          <a class="nav-link" href="#DatP">Datos Generales</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#Res">Resumen Profesional</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#Exp">Experiencia Laboral</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#Cont">Contacto</a>
+        </li>
       </ul>
-   </nav> 
+    </div>
+  </div>
+</nav>
+<!--FIN de Navegación-->
 </header>     
 
-<div>
-    <div class="renglon">
-    <div class="columna">
-      <h3 id="DatP">Datos generales</h3>
-      <p><strong>Dirección:</strong> Avenida Venezuela #12, Las Américas 2, Tapachula, Chiapas.</p>
-      <p><strong>Teléfono:</strong> +52962-129-0000</p>
-      <P><strong>Correo:</strong> roldan.bacilio@hotmail.com</P>
+<div class="mi-contenedor container-fluid text-white d-flex">
+    <div class="row">
+      <div class="col">
+        <h3 id="DatP">Datos generales</h3>
+        <p><strong>Dirección:</strong> Avenida Venezuela #12, Las Américas 2, Tapachula, Chiapas.</p>
+        <p><strong>Teléfono:</strong> +52962-129-0000</p>
+        <P><strong>Correo:</strong> roldan.bacilio@hotmail.com</P>
+      </div>
     </div>
-    <div class="Resumen">
-      <h3><strong>Resumen Profesional</strong></h3>
-      <p>Profesional con 22 años de experiencia en el sector y excelentes dotes de liderazgo y de integración de equipos. A lo largo de mi carrera siempre he destacado por mi capacidad para encontrar soluciones, proponer mejoras a los procesos, optimizar recursos y maximizar los beneficios. siempre busco desarrollarme profesionalmente y en constante capacitación.</P>
-    </div>
-  </div>
 
- <div class="renglon">
-  <div class="columna">
-    <h3 id="Exp">Experiencia</h3>
-    <h4>SAT/AGCTI/ACOST/AAD</h4>
-    <p><strong>Enlace (Analista de Infraestructura)</strong><br> 
-      •	Revisiones de infraestructura de TIC, detectando áreas de oportunidad y proponiendo las mejores prácticas para garantizar la continuidad operativa de la institución.<br>
-      •	Revisión del marco normativo de acuerdo con las mejores prácticas en materia de TIC.<br>
-      •	Análisis de información a efectos de elaborar cédulas de seguimiento de los hallazgos detectados.<br>
-      •	Generar informe de resultados en materia de TIC.<br>
-      •	Entrevistas virtuales por MS-TEAM.<br>
-    </p>
-    <p><strong>Enlace Local de Servicios Informáticos</strong><br> 
-      •	Soporte técnico a los usuarios del SAT/Aduana de Ciudad Hidalgo, Chiapas.<br>
-      •	Instalación y configuración de software institucional (SIREM, SIRESI, SICOSEM, SICA, SCAAA, Informix, ODBC).<br>
-      •	Diagnostico y solución de fallas en equipos de cómputo y periféricos (Pistolas lectoras de código de barras Symbol, Certificadoras EPSON, Lector de Huellas)<br>
-      •	Atención de incidentes en proyectos Servicios de Transportes de Carga y ligero [SIAVE, STC).<br>
-      •	Continuidad operativa de proyecto Videovigilancia administrada VIVA, mediante la gestión de decodificadores de video y gestión de servidores de grabación<br>
-    </p>
-  </div>
- </div>
+    <div class="row">
+      <div class="col">
+          <h3 id="Res"><strong>Resumen Profesional</strong></h3>
+          <p>Profesional con 22 años de experiencia en el sector y excelentes dotes de liderazgo y de integración de equipos. A lo largo de mi carrera siempre he destacado por mi capacidad para encontrar soluciones, proponer mejoras a los procesos, optimizar recursos y maximizar los beneficios. siempre busco desarrollarme profesionalmente y en constante capacitación.</P>
+      </div>
+    </div>
+</div>
+<hr class="Divide">
+<div class="mi-contenedor container-fluid text-white d-flex">
+  <h3 id="Exp">Experiencia</h3>
+  <div class="row">
+    <div class="col">
+      <h4>SAT/AGCTI/ACOST/AAD</h4>
+      <p><strong>Enlace (Analista de Infraestructura)</strong><br> 
+        •	Revisiones de infraestructura de TIC, detectando áreas de oportunidad y proponiendo las mejores prácticas para garantizar la continuidad operativa de la institución.<br>
+        •	Revisión del marco normativo de acuerdo con las mejores prácticas en materia de TIC.<br>
+        •	Análisis de información a efectos de elaborar cédulas de seguimiento de los hallazgos detectados.<br>
+        •	Generar informe de resultados en materia de TIC.<br>
+        •	Entrevistas virtuales por MS-TEAM.<br>
+      </p>
+    </div>
+    <div class="col">
+      <h4>SAT / AGCTI / Aduana de Ciudad Hidalgo</h4>
+      <p><strong>Enlace Local de Servicios Informáticos</strong><br> 
+        •	Soporte técnico a los usuarios del SAT/Aduana de Ciudad Hidalgo, Chiapas.<br>
+        •	Instalación y configuración de software institucional (SIREM, SIRESI, SICOSEM, SICA, SCAAA, Informix, ODBC).<br>
+        •	Diagnostico y solución de fallas en equipos de cómputo y periféricos (Pistolas lectoras de código de barras Symbol, Certificadoras EPSON, Lector de Huellas)<br>
+        •	Atención de incidentes en proyectos Servicios de Transportes de Carga y ligero [SIAVE, STC).<br>
+        •	Continuidad operativa de proyecto Videovigilancia administrada VIVA, mediante la gestión de decodificadores de video y gestión de servidores de grabación<br>
+      </p>
+    </div>
+   </div>
+</div>
+<hr class="Divide"> 
  
+<div class="container-fluid text-white d-flex ">
+  <div class="row">
+    <div class="col">
+      <footer>
+       <h5 id="Cont">Contacto</h5>
+       <p><span class="material-symbols-outlined">
+        alternate_email
+        </span> roldan.bacilio@hotmail.com / bapr751k@gmail.com</p>
+        <p><span class="material-symbols-outlined">
+          phone_callback
+          </span> +52 962-129-0000</p>
+      </footer>
+    </div>
+  </div>
 </div>
 
-<footer>
-  <h5 id="Cont">Contacto</h5>
-</footer>
-
-<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </body>
 </html>
